edit 4 for deployment

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://brianwangora.github.io/serendipity-motors/",
+  "homepage": "https://brianwangora.github.io/serendipity-motors",
   "name": "serendipity-motors",
   "version": "0.1.0",
   "private": true,
