package.json homepage change

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://serendipity-motors.vercel.app/serendipity-motors",
+  "homepage": "https://serendipity-motors.vercel.app",
   "name": "serendipity-motors",
   "version": "0.1.0",
   "private": true,
